--- a/ScreenWizard/Views/ExistingScreens.html
+++ b/ScreenWizard/Views/ExistingScreens.html
@@ -6,6 +6,25 @@
 <div class="row">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
+        <h4>List Screens</h4>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Screen Caption</th>
+                    <th>Table Name</th>
+                    <th>No. Visible Fields</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="screen in screens | filter: ScreenType = 'List'" ng-click="selectScreen(screen)">
+                    <td>{{screen.ScreenCaption}}</td>
+                    <td>{{screen.TableName}}</td>
+                    <td>{{screen.Fields.length}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="col-sm-5">
         <h4>Edit Screens</h4>
         <table class="table table-hover">
             <thead>
