--- a/ScreenWizard/Views/ListScreen.html
+++ b/ScreenWizard/Views/ListScreen.html
@@ -4,20 +4,28 @@
     <li class="breadcrumb-item active">List Screen</li>
 </ol>
 
-<div class="col-sm-5">
-    <h4>Test Fields from Field Select Screen</h4>
-    <table class="table table-hover">
+
+<div class="alert alert-info" role="alert">
+    <strong>Preview Mode</strong> This Screen is in Preview Mode - Edit Column Headings by clicking on them
+</div>
+
+
+<div class="col-sm-12">
+    <div class="pt-lg-3 pb-lg-3 text-center" style="margin-bottom: 1rem"><h2><input class="text-center" style="border: 0px" type="text" ng-model="screenCaption" ng-init="screenCaption = table + ' List'" /></h2></div>
+    <table class="table table-hover table-bordered">
         <thead>
             <tr>
-                <th>Field Name</th>
-                <th>Type</th>
+                <th class="thead-default alert-info text-center" ng-repeat="fieldHeader in previewFields track by $index"><input class="alert-info font-weight-bold" style="border: 0px; width: 100%" type="text" ng-model="fieldHeader.Caption" ng-init="fieldHeader.Caption = fieldHeader.Name"></th>
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="field in fields track by $index">
-                <td>{{field.Name}}</td>
-                <td>{{field.Type}}</td>
+            <tr ng-repeat="customer in customers">
+                <td ng-repeat="field in previewFields">{{customer[field.Name]}}</td>
             </tr>
         </tbody>
     </table>
+</div>
+<div class="p-5"></div>
+<div class="fixed-bottom text-center alert-info card-footer">
+    <button class="btn btn-success" ng-click="saveScreen(screenCaption, table, previewFields)">Save Screen</button>
 </div>
