Activity Table API functions Added. Removed hard coded references to 'Customer' table in favor of contextual references to the table being modified

--- a/ScreenWizard/Views/GeneratedListScreen.html
+++ b/ScreenWizard/Views/GeneratedListScreen.html
@@ -10,7 +10,7 @@
     <table class="table table-hover table-bordered">
         <thead>
             <tr>
-                <th class="thead-default alert-info text-center align-middle" ng-repeat="fieldHeader in screenData.Fields track by $index">{{fieldHeader.Caption}}</th>
+                <th class="thead-default alert-info text-left align-middle" ng-repeat="fieldHeader in screenData.Fields track by $index">{{fieldHeader.Caption}}</th>
             </tr>
         </thead>
         <tbody>
