Added Invoice API operations - Create / Update / Find

--- a/ScreenWizard/Views/GeneratedListScreen.html
+++ b/ScreenWizard/Views/GeneratedListScreen.html
@@ -7,7 +7,7 @@
 
 <div class="col-sm-12">
     <div class="pt-lg-3 pb-lg-3 text-center" style="margin-bottom: 1rem"><h2>{{screenData.ScreenCaption}}</h2></div>
-    <table class="table table-hover table-bordered">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th class="thead-default alert-info text-left align-middle" ng-repeat="fieldHeader in screenData.Fields track by $index">{{fieldHeader.Caption}}</th>
