--- a/ScreenWizard/Views/ListScreen.html
+++ b/ScreenWizard/Views/ListScreen.html
@@ -12,7 +12,7 @@
 
 <div class="col-sm-12">
     <div class="pt-lg-3 pb-lg-3 text-center" style="margin-bottom: 1rem"><h2><input class="text-center" style="border: 0px" type="text" ng-model="screenCaption" ng-init="screenCaption = table + ' List'" /></h2></div>
-    <table class="table table-hover table-bordered">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th class="thead-default alert-info text-center" ng-repeat="fieldHeader in previewFields track by $index"><input class="alert-info font-weight-bold" style="border: 0px; width: 100%" type="text" ng-model="fieldHeader.Caption" ng-init="fieldHeader.Caption = fieldHeader.Name"></th>
