--- a/ScreenWizard/Views/GeneratedListScreen.html
+++ b/ScreenWizard/Views/GeneratedListScreen.html
@@ -10,12 +10,12 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th class="thead-default alert-info text-left align-middle" ng-repeat="fieldHeader in screenData.Fields track by $index">{{fieldHeader.Caption}}</th>
+                <th class="thead-default alert-info text-left align-middle" ng-repeat="fieldHeader in screenData.Fields track by $index" ng-if="fieldHeader.Type != 'List'">{{fieldHeader.Caption}}</th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="customer in customers">
-                <td ng-repeat="field in screenData.Fields">{{customer[field.Name]}}</td>
+                <td ng-repeat="field in screenData.Fields" ng-if="field.Type != 'List'">{{customer[field.Name]}}</td>
             </tr>
         </tbody>
     </table>
