--- a/ScreenWizard/Views/ExistingScreens.html
+++ b/ScreenWizard/Views/ExistingScreens.html
@@ -16,7 +16,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="screen in screens | filter: ScreenType = 'List'" ng-click="selectScreen(screen)">
+                <tr ng-repeat="screen in screens | filter: screen.ScreenType = 'List'" ng-click="selectScreen(screen)">
                     <td>{{screen.ScreenCaption}}</td>
                     <td>{{screen.TableName}}</td>
                     <td>{{screen.Fields.length}}</td>
@@ -35,7 +35,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="screen in screens | filter: ScreenType = 'Edit'" ng-click="selectScreen(screen)">
+                <tr ng-repeat="screen in screens | filter: screen.ScreenType = 'Edit'" ng-click="selectScreen(screen)">
                     <td>{{screen.ScreenCaption}}</td>
                     <td>{{screen.TableName}}</td>
                     <td>{{screen.Fields.length}}</td>
