--- a/ScreenWizard/Views/GeneratedEditScreen.html
+++ b/ScreenWizard/Views/GeneratedEditScreen.html
@@ -24,17 +24,23 @@
         <div class="p-2"></div>
         <div ng-repeat="field in screenData.Fields track by $index" ng-if="field.Type == 'List'">
             <div class="row">
-                <ng-form role="form" class="col-sm-4 offset-1">
+                <ng-form class="col-sm-4 offset-1">
                     <h4 class="pb-sm-3">Add Item</h4>
-                    <div class="form-group row" ng-repeat="addField in field.ItemDetails">
+                    <div class="form-group row" ng-repeat="addField in field.ItemDetails" ng-if="addField.Name != 'Subtotal'">
                         <label class="col-md-4 col-form-label">{{addField.Caption}}</label>
-                        <div class="col-md-6">
-                            <input type="text" class="form-control" name="{{addfield.Name}}" ng-model="addField.Value"/>
+                        <div class="col-md-8">
+                            <input type="text" class="form-control" name="{{addField.Name}}" ng-model="addField.Value" />
                         </div>
                     </div>
-                    <button class="btn btn-secondary" type="button"ng-click="addRow()">Add Item to List</button>
+                    <div class="form-group row" ng-repeat="addField in field.ItemDetails" ng-if="addField.Name == 'Subtotal'">
+                        <label class="col-md-4 col-form-label">{{addField.Caption}}</label>
+                        <div class="col-md-8">
+                            <input type="number" class="form-control" name="{{addField.Name}}" ng-init="0" ng-model="addField.Value" placeholder="Calculated on Row addition" disabled/>
+                        </div>
+                    </div>
+                    <button class="btn btn-secondary" type="button" ng-click="addRow()">Add Item to List</button>
                 </ng-form>
-                <div class="col-sm-7"> 
+                <div class="col-sm-6"> 
                     <table class="table table-hover">
                         <thead>
                             <tr>
@@ -58,7 +64,7 @@
             <div class="col-sm-5">
                 <button class="btn btn-secondary">Delete</button>
                 <button class="btn btn-secondary" ng-click="reset()" type="reset">Clear</button>
-                <button class="btn btn-primary" id="submit" type="submit">Save</button>
+                <button class="btn btn-primary" type="submit" id="submit">Save</button>
             </div>
         </div>
     </form>
